# weed-lab

./: .gitignore  README.md
seaweed/: README.md  docker-compose.yml
seaweed/localstack/: README.md  docker-compose.yaml
seaweed/s3/: config.json
weed-admin/: components.json  package.json  tailwind.config.js
weed-admin/src/: typedef.js
weed-admin/src/lib/: utils.js
weed-admin/src/lib/components/: index.js
weed-admin/src/lib/components/containers/: ObjectStorage.svelte  Panel.svelte  index.js
weed-admin/src/lib/components/dialog/: AddBucket.svelte  index.js
weed-admin/src/lib/components/icon/: IconArrowDown.svelte  IconFile.svelte  IconFileImage.svelte  IconFolder.svelte  IconOpenFolder.svelte
weed-admin/src/lib/components/tree/: Bucket.svelte  Directory.svelte  Folder.svelte  Tree.svelte  index.js
weed-admin/src/lib/components/ui/button/: button.svelte  index.js
weed-admin/src/lib/components/ui/dialog/: dialog-content.svelte
weed-admin/src/lib/components/ui/icon/: IconBucket.svelte  IconFileImage.svelte  index.js
weed-admin/src/lib/components/ui/input/: input.svelte
weed-admin/src/lib/components/ui/table/: table-footer.svelte
weed-admin/src/lib/fetch/: fetch.js
weed-admin/src/lib/stores/: query.js
weed-admin/src/routes/: +layout.svelte  +page.svelte  Header.svelte
weed-api/: pyproject.toml
weed-api/utils/: duckdb.py  s3.py
weed-api/weed_api/: main.py
